over the last few commits i added scroll to leaderboards page, fixed padding on scores list in order to show numbers for the entries (ordered), attributed backgorund image linear gradient to :root in css, because it acts as an html selector, this way there is no empty white space if items gets pushed too far down and overflow body

--- a/assets/style.css
+++ b/assets/style.css
@@ -1,3 +1,9 @@
+:root {
+    background: linear-gradient(cadetblue,  rgb(32, 62, 64), rgb(26, 38, 39));
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
 * {
     font-family: 'Arial Narrow', Arial, sans-serif;
     margin: 0;
